<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Package installer</string>
    <string name="next">Next</string>
    <string name="install">Install</string>
    <string name="done">Done</string>
    <string name="security_settings_desc">Allow this app to:</string>
    <string name="cancel">Cancel</string>
    <string name="unknown">Unknown</string>
    <string name="installing">Installing\u2026</string>
    <string name="installing_app">Installing <xliff:g id="package_label">%1$s</xliff:g>\u2026</string>
    <string name="install_done">App installed.</string>
    <string name="install_confirm_question">Do you want to install this application?
            It will get access to:</string>
    <string name="install_confirm_question_no_perms">Do you want to install this application?
            It does not require any special access.</string>
    <string name="install_confirm_question_update">Do you want to install an update
            to this existing application?  Your existing data will not
            be lost.  The updated application will get access to:</string>
    <string name="install_confirm_question_update_system">Do you want to install an update
            to this built-in application?  Your existing data will not
            be lost.  The updated application will get access to:</string>
    <string name="install_confirm_question_update_no_perms">Do you want to install an update
            to this existing application?  Your existing data will not
            be lost.  It does not require any special access.</string>
    <string name="install_confirm_question_update_system_no_perms">Do you want to install an update
            to this built-in application?  Your existing data will not
            be lost.  It does not require any special access.</string>
    <string name="install_failed">App not installed.</string>
    <string name="install_failed_blocked">The package was blocked from being installed.</string>
    <string name="install_failed_conflict">App not installed as package conflicts with an existing package.</string>
    <string name="install_failed_incompatible" product="default">App not installed as app isn\'t
        compatible with your phone.</string>
    <string name="install_failed_invalid_apk">App not installed as package appears to be invalid.</string>
    <string name="install_failed_msg" product="default"><xliff:g id="app_name">%1$s</xliff:g> couldn\'t be installed on your phone.</string>
    <string name="launch">Open</string>
    <string name="unknown_apps_admin_dlg_text">Your admin doesn\'t allow installation of apps
        obtained from unknown sources</string>
    <string name="unknown_apps_user_restriction_dlg_text">Unknown apps can\'t be installed by this
        user</string>
    <string name="ok">OK</string>
    <string name="settings">Settings</string>
    <string name="manage_applications">Manage apps</string>
    <string name="dlg_app_replacement_title">Replace app?</string>
    <string name="dlg_app_replacement_statement">The app you\'re installing will replace another app.\n\nAll your previous user data will be saved.</string>
    <string name="dlg_sys_app_replacement_statement">This is a system app.\n\nAll your previous user data will be saved.</string>
    <string name="out_of_space_dlg_title">Out of space</string>
    <string name="out_of_space_dlg_text"><xliff:g id="app_name">%1$s</xliff:g> couldn\'t be installed. Free up some space and try again.</string>
    <string name="dlg_ok">OK</string>
    <string name="app_not_found_dlg_title">App not found</string>
    <string name="app_not_found_dlg_text"> The app wasn\'t found in the list of installed apps.</string>
    <string name="user_is_not_allowed_dlg_title">Not allowed</string>
    <string name="user_is_not_allowed_dlg_text">The current user is not allowed to perform this uninstallation.</string>
    <string name="generic_error_dlg_title">Error</string>
    <string name="generic_error_dlg_text">App could not be uninstalled.</string>
    <string name="uninstall_application_title">Uninstall app</string>
    <string name="uninstall_update_title">Uninstall update</string>
    <string name="uninstall_activity_text"><xliff:g id="activity_name">%1$s</xliff:g> is part of the following app:</string>
    <string name="uninstall_application_text">Do you want to uninstall this app?</string>
    <string name="uninstall_application_text_all_users">Do you want to uninstall this app for <b>all</b>
        users?  The application and its data will be removed from <b>all</b> users on the device.</string>
    <string name="uninstall_application_text_user">Do you want to uninstall this app for the user <xliff:g id="username">%1$s</xliff:g>?</string>
    <string name="uninstall_update_text">Replace this app with the factory version? All data will be removed.</string>
    <string name="uninstall_update_text_multiuser">Replace this app with the factory version? All data will be removed. This affects all users of this device, including those with work profiles.</string>
    <string name="uninstalling_notification_channel">Running uninstalls</string>
    <string name="uninstall_failure_notification_channel">Failed uninstalls</string>
    <string name="uninstalling">Uninstalling\u2026</string>
    <string name="uninstalling_app">Uninstalling <xliff:g id="package_label">%1$s</xliff:g>\u2026</string>
    <string name="uninstall_done">Uninstall finished.</string>
    <string name="uninstall_done_app">Uninstalled <xliff:g id="package_label">%1$s</xliff:g></string>
    <string name="uninstall_failed">Uninstall unsuccessful.</string>
    <string name="uninstall_failed_app">Uninstalling <xliff:g id="package_label">%1$s</xliff:g> unsuccessful.</string>
    <string name="uninstall_failed_device_policy_manager">Can\'t uninstall active device admin
        app</string>
    <string name="uninstall_failed_device_policy_manager_of_user">Can\'t uninstall active device
        admin app for <xliff:g id="username">%1$s</xliff:g></string>
    <string name="uninstall_all_blocked_profile_owner">This app is required for some users or
        profiles and was uninstalled for others</string>
    <string name="uninstall_blocked_profile_owner">This app is needed for
        your profile and can\'t be uninstalled.</string>
    <string name="uninstall_blocked_device_owner">This app is required
        by your device administrator and can\'t be uninstalled.</string>
    <string name="manage_device_administrators">Manage device admin apps</string>
    <string name="manage_users">Manage users</string>
    <string name="uninstall_failed_msg"><xliff:g id="app_name">%1$s</xliff:g> couldn\'t be uninstalled.</string>
    <string name="Parse_error_dlg_text">There was a problem parsing the package.</string>
    <string name="newPerms">New</string>
    <string name="allPerms">All</string>
    <string name="privacyPerms">Privacy</string>
    <string name="devicePerms">Device Access</string>
    <string name="no_new_perms">This update requires no new permissions.</string>
    <string name="grant_confirm_question">Do you want to grant the following permissions?
        It will get access to:</string>
    <string name="grant_dialog_button_deny">Deny</string>
    <string name="grant_dialog_button_more_info">More info</string>
    <string name="grant_dialog_button_deny_anyway">Deny anyway</string>
    <string name="current_permission_template">
        <xliff:g example="1" id="current_permission_index">%1$s</xliff:g> of
        <xliff:g example="2" id="permission_count">%2$s</xliff:g></string>
    <string name="permission_warning_template">Allow
        &lt;b><xliff:g example="Gmail" id="app_name">%1$s</xliff:g>&lt;/b> to
        <xliff:g example="do something" id="action">%2$s</xliff:g>?</string>
    <string name="permission_revoked_count"><xliff:g example="2" id="count">%1$d</xliff:g> disabled</string>
    <string name="permission_revoked_all">all disabled</string>
    <string name="permission_revoked_none">none disabled</string>
    <string name="grant_dialog_button_allow">Allow</string>
    <string name="permlab_togglePermissions" translatable="false">toggle permissions</string>
    <string name="permdesc_togglePermissions" translatable="false">Allows the holder to launch
        the UI for toggling app permissions. Should never be needed for normal apps.</string>
    <string name="app_permissions_breadcrumb">Apps</string>
    <string name="app_permissions">App permissions</string>
    <string name="never_ask_again">Don\'t ask again</string>
    <string name="no_permissions">No permissions</string>
    <string name="additional_permissions">Additional permissions</string>
    <plurals name="additional_permissions_more">
        <item quantity="one"><xliff:g example="1" id="count">%1$d</xliff:g> more</item>
        <item quantity="other"><xliff:g example="2" id="count">%1$d</xliff:g> more</item>
    </plurals>
    <string name="old_sdk_deny_warning">This app was designed for an older version of Android. Denying permission may cause it to no longer function as intended.</string>
    <string name="default_permission_description">perform an unknown action</string>
    <string name="app_permissions_group_summary"><xliff:g example="10" id="count">%1$d</xliff:g> of <xliff:g example="10" id="count">%2$d</xliff:g> apps allowed</string>
    <string name="menu_show_system">Show system</string>
    <string name="menu_hide_system">Hide system</string>
    <string name="permission_title"><xliff:g example="Camera" id="permission">%1$s</xliff:g> permissions</string>
    <string name="no_apps">No apps</string>
    <string name="location_settings">Location Settings</string>
    <string name="location_warning"><xliff:g example="Package Installer" id="app_name">%1$s</xliff:g> is a provider of location services for this device. Location access can be modified from location settings.</string>
    <string name="system_warning">If you deny this permission, basic features of your device may no longer function as intended.</string>
    <string name="permission_summary_enforced_by_policy">Enforced by policy</string>
    <string name="loading">Loading\u2026</string>
    <string name="all_permissions">All permissions</string>
    <string name="other_permissions">Other app capabilities</string>
    <string name="permission_request_title">Permission request</string>
    <string name="screen_overlay_title">Screen overlay detected</string>
    <string name="screen_overlay_message">To change this permission setting, you first have to turn off the screen overlay from Settings \u003e Apps</string>
    <string name="screen_overlay_button">Open settings</string>
    <string name="wear_not_allowed_dlg_title">Android Wear</string>
    <string name="wear_not_allowed_dlg_text">Install/Uninstall actions not supported on Wear.</string>
    <string name="permission_review_warning_title_template_update">
        <xliff:g example="Gmail" id="app_name">%1$s</xliff:g> has been updated.
        Allow <xliff:g example="Gmail" id="app_name">%1$s</xliff:g> to
        access the following?</string>
    <string name="permission_review_title_template_install">Choose what to allow
        &lt;b><xliff:g example="Gmail" id="app_name">%1$s</xliff:g>&lt;/b> to access</string>
    <string name="permission_review_title_template_update">
        &lt;b><xliff:g example="Gmail" id="app_name">%1$s</xliff:g>&lt;/b> has been updated.
        Choose what to allow this app to access.</string>
    <string name="review_button_cancel">Cancel</string>
    <string name="review_button_continue">Continue</string>
    <string name="new_permissions_category">New permissions</string>
    <string name="current_permissions_category">Current permissions</string>
    <string name="message_staging">Staging app&#8230;</string>
    <string name="app_name_unknown">Unknown</string>
    <string name="help_app_permissions" translatable="false"></string>
</resources>